--- a/config/locales/active_record.pt-BR.yml
+++ b/config/locales/active_record.pt-BR.yml
@@ -22,6 +22,10 @@ pt-BR:
       reconciliation:
         date: Data
         profile: Perfil
+        statuses:
+          in_progress: Em Andamento
+          finished: Concluída
+          cancelled: Cancelada
       subcategory:
         name: Nome
       wallet:
