--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -142,6 +142,16 @@ en:
         title: 'Reconciliation for %{date}'
         status: Status
         sub_header_summary: Summary
+        sub_header_wallets: Wallet Balances
+        sub_header_wallet_name: Wallet
+        sub_header_calculated_balance: Calculated
+        sub_header_real_balance: Actual
+        calculated_balance_info_text: >
+          This balance was calculated by summing the amounts from all transaction since the last reconciliation, or
+          since the start, if this is the first reconciliation.
+        real_balance_info_text: >
+          This should reflect the actual balance on the wallet at the end of the day on the reconciliation date. This
+          is usually done by counting how much cash there is, or checking the balance in a bank account, for instance.
     settings:
       form:
         first_name_label: First Name
