Do not allow reconciliation wallet balance to be changed after reconciliation is cancelled or finished

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -8,6 +8,9 @@
             "finished": "Completed",
             "in_progress": "In Progress"
           }
+        },
+        "reconciliation_wallet": {
+          "balance_amount_cents": "Balance"
         }
       },
       "errors": {
@@ -43,6 +46,13 @@
               "date": {
                 "cannot_be_older_than_finished_reconciliations": "has to be newer than the date from the last finished reconciliation",
                 "cannot_finish_date_in_future": "cannot be a date in the future when finishing a reconciliation"
+              }
+            }
+          },
+          "reconciliation_wallet": {
+            "attributes": {
+              "balance_amount_cents": {
+                "cannot_change_on_completed_reconciliation": "cannot be changed after reconciliation is finished or cancelled"
               }
             }
           },
