--- a/config/locales/active_record.pt-BR.yml
+++ b/config/locales/active_record.pt-BR.yml
@@ -26,6 +26,8 @@ pt-BR:
           in_progress: Em Andamento
           finished: Concluída
           cancelled: Cancelada
+      reconciliation_wallet:
+        balance_amount_cents: Saldo
       subcategory:
         name: Nome
       wallet:
@@ -52,6 +54,11 @@ pt-BR:
             date:
               cannot_be_older_than_finished_reconciliations: deve ser posterior à data da última reconciliação
               cannot_finish_date_in_future: não pode ser uma data no futuro ao terminar uma reconciliação
+        reconciliation_wallet:
+          attributes:
+            balance_amount_cents:
+              cannot_change_on_completed_reconciliation: >
+                não pode ser alterado após reconciliação ser concluída ou cancelada
         transaction:
           attributes:
             base:
