--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -150,6 +150,8 @@ pt-BR:
         table_header_real_balance: Real
         calculated_balance: Calculado
         real_balance: Real
+        unspecified: Não especificado
+        total: Total
         difference_balance: Divergência
         calculated_balance_info_text: >
           Esse saldo foi calculado somando as quantias de todas as transações desde a última reconciliação, ou desde
@@ -157,6 +159,10 @@ pt-BR:
         real_balance_info_text: >
           Isso deve refletir o saldo real da carteira ao final do dia da reconciliação. Isso geralmente é feito
           contando o dinheiro em espécie, ou verificando o saldo de uma conta bancária, por exemplo.
+        unspecified_balance_cannot_be_edited: >
+          Saldo não especificado se refere à soma das transações que não possuem uma carteira especificada. Antes de
+          concluir esta reconciliação, todas as transações devem ter suas carteiras definidas e este saldo deve ser
+          reduzido a zero.
     settings:
       form:
         first_name_label: Nome
