--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -145,6 +145,7 @@ pt-BR:
         status: Status
         sub_header_wallets: Saldos das Carteiras
         sub_header_balances: Saldo Geral
+        sub_header_transactions: Transações no Período
         table_header_wallet_name: Carteira
         table_header_calculated_balance: Calc.
         table_header_real_balance: Real
