--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -51,6 +51,7 @@ pt-BR:
         multiple_select_selection: seleção
         multiple_select_selections: seleções
         none: Nada
+        unspecified: Não especificado
       footer:
         version: Versão
         copyright_notice: '© 2023 Rodrigo Castro'
@@ -208,6 +209,14 @@ pt-BR:
         edit: Editar
         delete: Remover
         delete_confirmation: Tem certeza? Esta ação não pode ser desfeita.
+        amount: Valor
+        name: Nome
+        transaction_date: Data
+        sorting: Ordem
+        no_transactions: Não há transações para exibir.
+        view_more: 'Ver todas as transações&hellip;'
+      filters:
+        filters: Filtros
         transaction_type: Tipo de Transação
         spends: Gastos
         income: Receita
@@ -216,14 +225,10 @@ pt-BR:
         ninety_days: 90 dias
         category: Categoria
         categories: Categorias
-        amount: Valor
-        name: Nome
-        transaction_date: Data
-        filters: Filtros
-        sorting: Ordem
-        no_transactions: Não há transações para exibir.
-        view_more: 'Ver todas as transações&hellip;'
+        wallet: Carteira
+        wallets: Carteiras
         category_filter: Selecione Categoria
+        wallet_filter: Selecione Carteira
       form:
         new_title: Nova Transação
         edit_title: Editar Transacão
