--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -136,6 +136,8 @@ en:
         cancel: Cancel
         confirm: Send Invite
     reconciliations:
+      info_alert:
+        message: 'There is a reconciliation in progress for %{date}. <a href="%{href}">Click here</a> to access it.'
       index:
         title: Reconciliations
         new: Start new Reconciliation
